Generated by AI begins
# admin_repository.py
# Repository for admin account management

import sqlite3
import uuid
import os
import hashlib
from typing import Optional
from contextlib import contextmanager

class Admin:
    """Admin dataclass"""
    def __init__(self, admin_id: str, username: str, password_hash: str, salt: str):
        self.admin_id = admin_id
        self.username = username
        self.password_hash = password_hash
        self.salt = salt

class AdminRepository:
    def __init__(self, db_path: str):
        self.db_path = db_path

    @contextmanager
    def _conn(self):
        conn = sqlite3.connect(self.db_path)
        conn.row_factory = sqlite3.Row
        try:
            yield conn
        finally:
            conn.close()

    def _hash_password(self, password: str, salt: bytes, iterations: int = 100_000) -> str:
        dk = hashlib.pbkdf2_hmac("sha256", password.encode("utf-8"), salt, iterations)
        return dk.hex()

    def find_by_username(self, username: str) -> Optional[Admin]:
        with self._conn() as conn:
            cur = conn.cursor()
            cur.execute("SELECT * FROM admin WHERE username = ?", (username,))
            row = cur.fetchone()
            if row:
                return Admin(
                    admin_id=row["admin_id"],
                    username=row["username"],
                    password_hash=row["password_hash"],
                    salt=row["salt"]
                )
            return None

    def verify_password(self, username: str, password: str) -> bool:
        admin = self.find_by_username(username)
        if not admin:
            return False
        salt = bytes.fromhex(admin.salt)
        pwd_hash = self._hash_password(password, salt)
        return pwd_hash == admin.password_hash

    def create_admin(self, username: str, password: str) -> Admin:
        admin_id = str(uuid.uuid4())
        salt = os.urandom(16)
        pwd_hash = self._hash_password(password, salt)
        
        with self._conn() as conn:
            cur = conn.cursor()
            cur.execute("""
                INSERT INTO admin (admin_id, username, password_hash, salt)
                VALUES (?, ?, ?, ?)
            """, (admin_id, username, pwd_hash, salt.hex()))
            conn.commit()
        
        return Admin(admin_id, username, pwd_hash, salt.hex())

    def find_all(self):
        """Get all admin accounts (for super admin view)"""
        with self._conn() as conn:
            cur = conn.cursor()
            cur.execute("SELECT admin_id, username FROM admin")
            return [dict(row) for row in cur.fetchall()]
# Generated by AI ends